welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Booleen) {
  if(versaLAvant) {
    for(i<-1 to nbPas) {
      avance()
    }
  }
  else {
    for(i<-1 to nbPas) {
      recule()
    }
  }
}